--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.1.5",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "use-sound": "^4.0.1"
   }
 }
