--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "use-sound": "^4.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
